Swap titles and subtitles for MTR section

--- a/index.html
+++ b/index.html
@@ -659,8 +659,8 @@
             <div class="section-header">
                 <div class="section-icon mtr">🚇</div>
                 <div>
-                    <div class="section-title">MTR Tseung Kwan O Line</div>
-                    <div class="section-subtitle">LOHAS Park Station 康城站</div>
+                    <div class="section-title">LOHAS Park Station 康城站</div>
+                    <div class="section-subtitle">MTR Tseung Kwan O Line</div>
                 </div>
             </div>
             <div class="station-card" id="work-mtr-card">
